--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eddy Home Page</title>
+    <title>Adam Wilson Portfolio</title>
+
+    <!-- Google Fonts style -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/e0098116ea.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +20,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" width="" class="logo">
+                <img src="images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -40,18 +46,13 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png">
+                    <img src="images/bgc.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Adam is currently enrolled in the Web Design and UX Design programs at Wake Tech. He was born and
-                        raised in Raleigh, North Carolina, and currently works full-time as a Web Designer for an online
-                        marketing company called Autoshop Solutions. They specialize in helping automotive repair shops
-                        get found on Google through SEO, creating custom websites, posting social media, and running ads
-                        on Google.<br><br>
-                        It is his goal to complete both associate degrees and apply for a Web Design position within his
-                        company. Adam loves designing websites and is looking forward to getting experience and working
-                        his way to becoming an excellent web designer.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam molestias quo debitis velit.
+                        Minus, error? Dolore et exercitationem, autem cumque ipsa aperiam quod, laboriosam voluptas
+                        aliquid, illo voluptatibus assumenda unde!</p>
                     <br><br>
                     <div class="tab">
                         <div class="tab-titles">
@@ -62,43 +63,56 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>Web Design</span><br>Designing Web Interfaces</li>
-                                <li><span>Adobe Workspace</span><br>Proficient With Most Adobe Softwares</li>
-                                <li><span>Graphic Design</span><br>Designing Custom Logos For Businesses</li>
+                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
+                                <li><span>Web Design</span><br>Designing Web Interfaces</li>
+
                             </ul>
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2023 - Current</span><br>Web Designer at Autoshop Solutions</li>
-                                <li><span>2022 - 2023</span><br>Production Coordinator at Autoshop Solutions</li>
-                                <li><span>2021 - 2022</span><br>Junior Client Success Manager at Autoshop Solutions</li>
-                                <li><span>2018 - 2021</span><br>Service Advisor at Rimguard Inc.</li>
+                                <li>
+                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                </li>
+                                <li>
+                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                </li>
+                                <li>
+                                    <span>2023 - Current</span><br>Web Designer at Autoshop Solutions
+                                </li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>2023</span><br>Associate in UX Design</li>
-                                <li><span>2023</span><br>Associate in Web Design</li>
-                                <li><span>2017</span><br>Associate in Business Administration</li>
-                                <li><span>2013</span><br>Associate in Arts</li>
+                                <li>
+                                    <span>2023</span><br>Associate in UX Design
+                                </li>
+                                <li>
+                                    <span>2023</span><br>Associate in Web Design
+                                </li>
+
+                                <li>
+                                    <span>2017</span><br>Associate in Business Administration
+                                </li>
+
                             </ul>
                         </div>
                     </div>
-                    <a href="#" download class="btn btn2">DOWNLOAD CV</a>
+                    <a href="#" download class="btn btn2">BUTTON</a>
                 </div>
             </div>
         </div>
 
     </div>
 
-    <!----------------------------services--------------------------------------------->
+    <!----------------------------Blog--------------------------------------------->
 
     <div id="services">
         <div class="container">
-            <h1 class="sub-title">My Services</h1>
+            <h1 class="sub-title">Blog</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
-                    <h2>Web Design</h2>
+                    <h2>Blog 1</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
                         repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
                         optio dolores!</p>
@@ -106,7 +120,7 @@
                 </div>
                 <div>
                     <i class="fa-solid fa-crop-simple"></i>
-                    <h2>UX Design</h2>
+                    <h2>Blog 2</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
                         repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
                         optio dolores!</p>
@@ -114,7 +128,7 @@
                 </div>
                 <div>
                     <i class="fa-solid fa-pen"></i>
-                    <h2>Graphic Design</h2>
+                    <h2>Blog 3</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
                         repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
                         optio dolores!</p>
@@ -131,9 +145,9 @@
             <h1 class="sub-title">Portfolio</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="images/work-1.png">
+                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
-                        <h3>Premier One Automotive</h3>
+                        <h3>test1</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
                             perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
                             vero, nesciunt odio laudantium qui.</p>
@@ -141,9 +155,9 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-2.png">
+                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 50vh;">
                     <div class="layer">
-                        <h3>Texas Complete Automotive</h3>
+                        <h3>test2</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
                             perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
                             vero, nesciunt odio laudantium qui.</p>
@@ -151,9 +165,9 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="images/work-3.png">
+                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
-                        <h3>Allstar Automotive</h3>
+                        <h3>test3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
                             perferendis? Libero incidunt harum officiis explicabo cumque. Hic, voluptates? Sunt illo ad
                             vero, nesciunt odio laudantium qui.</p>
@@ -173,11 +187,12 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> ahwilson3@my.waketech.edu</p>
-                    <p><i class="fa-solid fa-phone"></i> (012)345-6789</p>
+                    <p><i class="fa-solid fa-envelope"></i>22026266d@connect.polyu.hk</p>
+                    <p><i class="fa-solid fa-phone"></i> (852) 9716 6524</p>
                     <div class="social-icons">
                         <a href=""><i class="fa-brands fa-square-facebook"></i></a>
                         <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
+                        <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
                     </div>
                     <a href="images/PortfolioResume.pdf" download class="btn btn2">DOWNLOAD CV</a>
                 </div>
@@ -192,7 +207,7 @@
             </div>
         </div>
         <div class="copyright">
-            <p>Copyright 2023 | All Rights Reserved</p>
+            <p>Nice to meet you!</p>
         </div>
     </div>
 
