--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="./images/logo.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -46,7 +46,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/bgc.png">
+                    <img src="./images/bgc.png">
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -145,7 +145,7 @@
             <h1 class="sub-title">Portfolio</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 100%;">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
                         <h3>test1</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
@@ -155,7 +155,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 50vh;">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 50vh;">
                     <div class="layer">
                         <h3>test2</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
@@ -165,7 +165,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="/images/bgc2.png" style="background-color: aliceblue;height: 100%;">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
                         <h3>test3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
