--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#" target="_blank">Blog</a>
                     </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                     <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
@@ -194,7 +194,7 @@
                         <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
                         <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
                     </div>
-                    <a href="images/PortfolioResume.pdf" download class="btn btn2">DOWNLOAD CV</a>
+                    <a href="images/PortfolioResume.pdf" download class="btn btn2">Button</a>
                 </div>
                 <div class="contact-right">
                     <form>
