--- a/blog.html
+++ b/blog.html
@@ -31,34 +31,36 @@
         </nav>
     </div>
 
-    <!------------------------------------contact----------------------------------->
-
-    <div id="contact">
+    <!------------------------------------blog----------------------------------->
+    <div id="services">
         <div class="container">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i>22026266d@connect.polyu.hk</p>
-                    <p><i class="fa-solid fa-phone"></i> (852) 9716 6524</p>
-                    <div class="social-icons">
-                        <a href=""><i class="fa-brands fa-square-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></i></a>
-                        <a href=""><i class="fa-brands fa-square-instagram"></i></i></a>
-                    </div>
-                    <a href="images/PortfolioResume.pdf" download class="btn btn2">Button</a>
+            <h1 class="sub-title">Blog</h1>
+            <div class="services-list">
+                <div>
+                    <i class="fa-solid fa-code"></i>
+                    <h2>Blog 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
+                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
+                        optio dolores!</p>
+                    <a href="#">Learn More</a>
                 </div>
-                <div class="contact-right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your Name" required>
-                        <input type="email" name="email" placeholder="Your Email" required>
-                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
-                        <button type="submit" class="btn btn2">SEND MESSAGE</button>
-                    </form>
+                <div>
+                    <i class="fa-solid fa-crop-simple"></i>
+                    <h2>Blog 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
+                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
+                        optio dolores!</p>
+                    <a href="#">Learn More</a>
+                </div>
+                <div>
+                    <i class="fa-solid fa-pen"></i>
+                    <h2>Blog 3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
+                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
+                        optio dolores!</p>
+                    <a href="#">Learn More</a>
                 </div>
             </div>
-        </div>
-        <div class="copyright">
-            <p>Footer</p>
         </div>
     </div>
 
