--- a/index.html
+++ b/index.html
@@ -19,15 +19,12 @@
 <body>
     <div id="header">
         <div class="container">
-            <nav>
+            <nav id="test">
                 <img src="./images/logo.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#" target="_blank">Blog</a>
-                    </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -104,39 +101,6 @@
 
     </div>
 
-    <!----------------------------Blog--------------------------------------------->
-
-    <div id="services">
-        <div class="container">
-            <h1 class="sub-title">Blog</h1>
-            <div class="services-list">
-                <div>
-                    <i class="fa-solid fa-code"></i>
-                    <h2>Blog 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
-                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
-                        optio dolores!</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div>
-                    <i class="fa-solid fa-crop-simple"></i>
-                    <h2>Blog 2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
-                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
-                        optio dolores!</p>
-                    <a href="#">Learn More</a>
-                </div>
-                <div>
-                    <i class="fa-solid fa-pen"></i>
-                    <h2>Blog 3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum ad nulla tempore amet unde,
-                        repudiandae quisquam consequuntur, suscipit quam non rem nobis nostrum hic debitis qui id nam
-                        optio dolores!</p>
-                    <a href="#">Learn More</a>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!----------------------------portfolio--------------------------------------------->
 
@@ -238,6 +202,19 @@
         }
         function closemenu() {
             sidemenu.style.right = "-200px"
+        }
+
+
+
+        window.onscroll = function () { myFunction() };
+
+        var navbar = document.getElementById("test");
+        var sticky = navbar.offsetTop;
+
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                navbar.classList.add("sticky")
+            } 
         }
 
     </script>
