--- a/quote.html
+++ b/quote.html
@@ -17,13 +17,13 @@
 </head>
 
 <body>
-    <nav>
+    <nav id="test">
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
-            <li><a href="index.html">ABOUT ME</a></li>
-            <li><a href="quote.html">MY QUOTES</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="quote.html">My Quotes</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="contact.html">Contact</a></li>
             <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
         <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
@@ -108,7 +108,7 @@
             <h1 class="sub-title">Portfolio</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="./images/bgc2.png">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
                         <h3>test1</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
@@ -118,7 +118,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./images/bgc2.png">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 50vh;">
                     <div class="layer">
                         <h3>test2</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
@@ -128,7 +128,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="./images/bgc2.png">
+                    <img src="./images/bgc2.png" style="background-color: aliceblue;height: 100%;">
                     <div class="layer">
                         <h3>test3</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos molestiae ab omnis quam
