--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eddy Website</title>
 
+    <link rel="shortcut icon" href="./images/logo.png">
+
     <!-- Google Fonts style -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,12 +19,13 @@
 </head>
 
 <body>
-    <nav id="test">
+    <nav>
         <img src="./images/logo.png" class="logo">
         <ul id="sidemenu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="quote.html">My Quotes</a></li>
+            <li><a href="portfolio.html">about</a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="skill.html">skill</a></li>
             <li><a href="contact.html">Contact</a></li>
             <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
         </ul>
