--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,18 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav>
-            <img src="./images/logo.png" class="logo">
-            <ul id="sidemenu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
-            </ul>
-            <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
-        </nav>
-    </div>
+    <nav>
+        <img src="./images/logo.png" class="logo">
+        <ul id="sidemenu">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="portfolio.html">about</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="skill.html">skill</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <i class="fas fa-sharp fa-solid fa-xmark" onclick="closemenu()"></i>
+        </ul>
+        <i class="fas fa-solid fa-bars" onclick="openmenu()"></i>
+    </nav>
 
     <!------------------------------------contact----------------------------------->
 
